# Mp4FrameSaver

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: Config.h  FramePublisher.h  FrameResizer.h  FrameSaver.h  MessageQueue.h  Service.h  Utils.h
source/: FramePublisher.cpp  FrameResizer.cpp  FrameSaver.cpp  MessageQueue.cpp  Service.cpp  Utils.cpp  main.cpp
source/client/: main.cpp
